--- a/01.Composant et props.md
+++ b/01.Composant et props.md
@@ -1,8 +1,19 @@
-# Props
+# Base
+
+- Créer un projet `npm init react-app Nom-du-projet` (le nom du projet doit être en minuscule)
+- Lancer un projet : `npm start`
+
+# Composant
+
+Les composants react vont nous permettre de créer nos interfaces en bloc de code indépendant et réutilisable.
 
 - Créer dans src un dossier component
 - Dans ce dossier créer un dossier Welcome
 - dans le dossier welcome créer un fichier welcome.jsx
+
+# Props
+
+
 
 - Pour utiliser les props dans la console : `npm install prop-types`
 
@@ -14,7 +25,7 @@ const Welcome = (props) => {
 
     const { nom } = props; //  =  const nom = props.nom;
 
-    return (
+    return ( // ma vue
         <p>Bienvenue {nom}</p>
     );
 }
