--- a/01.Composant et props.md
+++ b/01.Composant et props.md
@@ -13,15 +13,15 @@ Les composants react vont nous permettre de créer nos interfaces en bloc de cod
 
 # Props
 
-
-
 - Pour utiliser les props dans la console : `npm install prop-types`
+
+- **Fichier welcome.jsx**
 
 ```jsx
 import PropTypes from 'prop-types';
 
 // const Welcome = function(props) {}
-const Welcome = (props) => {
+const Welcome = (props) => { // Les propriétés de mon composant ( les données)
 
     const { nom } = props; //  =  const nom = props.nom;
 
@@ -37,7 +37,7 @@ Welcome.propTypes = {
 export default Welcome;
 ```
 
-- Le fichier App.js
+- **Le fichier App.js**
 
 ```js
 import Welcome from './components/welcome/welcome';
@@ -45,7 +45,9 @@ import Welcome from './components/welcome/welcome';
 function App() {
   return (
     <div className="App">
+    
       <Welcome nom="Marie"/>
+
     </div>
   );
 }
