--- a/04.Collections id unique exercice student.md
+++ b/04.Collections id unique exercice student.md
@@ -61,6 +61,11 @@ const Student = (props) => {
     )
 }
 
+Student.defaultProps = {
+    // tableau par défaut comme ça plente pas si y a pas de tableau
+    etudiants : []
+}
+
 // 
 Student.propTypes = {
     // props.etudiants.map( voir ligne 36 )
