--- a/03.collections.md
+++ b/03.collections.md
@@ -9,8 +9,9 @@ import PropTypes from 'prop-types';
 
 const Collection = (props) => {
 
-    // convertir le objet js en jsx
+    // convertir le objet js en jsx.
     const listElement = props.noms.map(
+        // pour chaque element ( comme une boucle) de mon tableau de nom
         nom => <li>{nom}</li>
     );
     return (
