--- a/04.Collections id unique exercice student.md
+++ b/04.Collections id unique exercice student.md
@@ -34,7 +34,7 @@ const Student = (props) => {
 
     // convertir le objet js en jsx
     const etudidantJSX = props.etudiants.map(
-        // clé unique
+        // pour chaque element ( comme une boucle) de mon tableau étudiants => clé unique
         el => < StudentTable key={el.id} {...el} />
     );
 
