--- a/05.affichage conditionnel.md
+++ b/05.affichage conditionnel.md
@@ -1,7 +1,7 @@
 # Affichage conditionnel
 
 ```jsx
-const affichageConditionnel = (props) => {
+const AffichageConditionnel = (props) => {
     const {msg, visible, error} = props;
 
     if(error) {  // Si j'ai une erreur
@@ -22,3 +22,41 @@ const affichageConditionnel = (props) => {
     )
 }
 ``` 
+
+## Affichage conditionnel de composant
+
+- affichageConditionnel.jsx
+
+```jsx
+const User = (props) => {
+    return( <h1>Bienvenue</h1>);
+}
+const Inscription = (props) => {
+    return( <h1>Veuillez vous inscrire.</h1>);
+}
+
+const AffichageConditionnel = (props) => {
+    const { estInscrit } = props;
+    
+    if (estInscrit) {
+        return < user />;
+    }
+    return <Inscription />
+}
+export default AffichageConditionnel;
+```
+
+- App.js
+
+```js
+import AffichageConditionnel from './components/affichageConditionnel/affichageConditionnel';
+function App() {
+    return (
+        <div className="App">
+            < AffichageConditionnel estInscrit={false}/>
+        </div>
+  );
+}
+
+export default App;
+```
