--- a/07.date du jour.md
+++ b/07.date du jour.md
@@ -1,2 +1,37 @@
 # Date du jour
 
+- Fichier date-du-jour.xml
+
+```jsx
+import { useState } from "react";
+
+const DateDuJour = () => {
+
+    const [date, setDate] = useState(new Date());
+
+    const montrerDate = date.toLocaleDateString("fr-BE", { 
+        day: "numeric" ,
+        month: "long",
+        year: "numeric"
+    })
+    return (
+        <p>{montrerDate}</p>
+    )
+}
+export default DateDuJour;
+```
+
+- Fichier App.js
+
+```js
+import DateDuJour from './components/date-du-jour/date-du-jour';
+function App() {
+      return (
+        <div className="App">
+            <DateDuJour />
+        </div>
+  );
+}
+
+export default App;
+```
