--- a/08.Compteur.md
+++ b/08.Compteur.md
@@ -8,6 +8,7 @@
 import { useState } from "react";
 
 const Compteur = () => {
+    // valeur par defaut est à 0
     const [ monCompteur, setMonCompteur] = useState(0);
 
     const incremente = () => {
@@ -22,7 +23,7 @@ const Compteur = () => {
         <>
         <h1>Mon compteur {monCompteur} </h1>
         <button onClick={incremente}>Augmente moi</button>
-        
+
         {/* Si mon compteur est plus grand que 0 */}
         { (monCompteur > 0) && (
             <button onClick={miseAzero}>Remettre à 0</button>
