--- a/01.Composant et props.md
+++ b/01.Composant et props.md
@@ -2,6 +2,7 @@
 
 - Créer un projet `npm init react-app Nom-du-projet` (le nom du projet doit être en minuscule)
 - Lancer un projet : `npm start`
+- Installer un projet téléchargé depuis github : `npm install` (ça va installer les dependences)
 
 # Composant
 
