--- a/02.style.md
+++ b/02.style.md
@@ -7,6 +7,7 @@ components > elementStyle > element-style.jsx
 
 ```jsx
 import PropTypes from 'prop-types';
+// Importer mon style
 import style from './element-style.module.css';
 
 const ElementStyle = (props) => {
@@ -14,7 +15,8 @@ const ElementStyle = (props) => {
 const {nb1, nb2} = props;
 const resultat =  nb1 + nb2
 
-    return(
+    return( // ma vue
+                 // utilisation de mon style
         <p> <span className={style.nb}>{ nb1 }</span> plus <span>{nb2}</span> = {resultat}</p>
     );
 }
@@ -34,6 +36,8 @@ export default ElementStyle;
 ```
 
 ## fichier element-style.module.css
+
+Le fichier de style. On utilise un module car les modules CSS sosnt pratiques pour les composants placés dans des fichiers séparé
 
 components > elementStyle > element-style.module.css
 
