--- a/04.Collections id unique exercice student.md
+++ b/04.Collections id unique exercice student.md
@@ -107,7 +107,7 @@ const StudentTable = (props) => {
 StudentTable.defaultProps = {
     resultat : 'Pas de résultat'
 }
-// 
+// Vérification du type des variables
 StudentTable.propTypes = {
     nom: PropTypes.string.isRequired,
     prenom : PropTypes.string.isRequired,
