--- a/08.Compteur.md
+++ b/08.Compteur.md
@@ -1,4 +1,52 @@
-# Compteur
+# Compteur avec props 
+
+C'est mieux car ça me permettrait d'avoir deux bouton différent. Un qui augmente de 1 et l'autre de 5 par exemple
+
+```jsx
+import PropType from 'prop-types';
+import { useState } from "react";
+
+const Compteur = (props) => {
+
+    const { incr } = props;
+
+    const [ monCompteur, setMonCompteur] = useState(0);
+
+    const incremente = () => {
+        // valeur initiale => nouvelle valeur
+        setMonCompteur( monCompteur => monCompteur + incr);
+      //  setVisible
+    }
+    const miseAzero = () => {
+        setMonCompteur(0);
+    }
+
+    return(
+        <>
+        <h1>Mon compteur {monCompteur} </h1>
+        <button onClick={incremente}>Augmente moi</button>
+        
+        {/* On voit mon bouton que si mon compteur est plus grand que 0 */}
+        { (monCompteur > 0) && (
+            <button onClick={miseAzero}>Remettre à 0</button>
+        )}
+        </>
+    )
+}
+// Mon compteur augmente par défaut de 1
+Compteur.defaultProps = {
+    incr: 1
+}
+
+// Vérification du type des variables ( pas obligatoire )
+Compteur.PropType = {
+    incr : PropType.number
+}
+
+export default Compteur;
+```
+
+# Compteur sans props
 
 - Un titre avec mon compteur
 - Un bouton pour incrémenter
@@ -34,3 +82,4 @@ const Compteur = () => {
 }
 export default Compteur;
 ```
+
