--- a/09.Hook vs Class.md
+++ b/09.Hook vs Class.md
@@ -67,8 +67,7 @@ class ClassExemple extends React.Component {
 
       // state est l'état initial
       this.state = { // L'état de mon bouton démarre à 0
-        monCompteur: 0,
-        incr: 1
+        monCompteur: 0 
       };
 
     }
@@ -78,7 +77,7 @@ class ClassExemple extends React.Component {
         // setState : indique à React que qq chose à été changé et qu'il faut se mettre à jour
         this.setState(state => ({
             // valeur initiale => nouvelle valeur
-            monCompteur: state.monCompteur + state.incr
+            monCompteur: state.monCompteur + this.props.incr
         }));
     }
     miseAzero = () => {
@@ -99,7 +98,11 @@ class ClassExemple extends React.Component {
         </>
       );
     }
-}
+  }
+
+  ClassExemple.defaultProps = {
+    incr : 1 // mon bouton augmente de 1
+  }
 
 export default ClassExemple;
 
