--- a/10.formulaire.md
+++ b/10.formulaire.md
@@ -8,8 +8,8 @@ const Formulaire = () => {
 
     const [ msg , envoyerMsg ] = useState("");
 
-    const gererEnvoi = e => {
-        e.preventDefault();
+    const gererEnvoi = e => { // e represente l'evenement envoyé par le formulaire
+        e.preventDefault(); // pour éviter de raffraichir la page tant que le formulaire n'est pas envoyé
         console.log(msg);
     }
 
