--- a/09.Hook vs Class.md
+++ b/09.Hook vs Class.md
@@ -50,12 +50,12 @@ export default Compteur;
 # Compteur version Class 
 
 ```js
-import React from 'react'; 
-import { Component } from 'react'; // c'est l'API qui permet de gérer les composants
+// import React from 'react'; 
+import { Component, React } from 'react'; // c'est la classe qui permet de gérerer les composants
 
 
-// Pour définir un composant React avec une classe, vous devez étendre React.Component
-class ClassExemple extends React.Component {
+// Pour définir un composant React avec une classe, vous devez étendre Component
+class ClassExemple extends Component {
 
     // Le constructeur est une méthode utilisée pour initialiser l'état d'un objet dans une classe. 
     //Il est appelé automatiquement lors de la création d'un objet dans une classe.
@@ -75,9 +75,9 @@ class ClassExemple extends React.Component {
     // sans utiliser la méthode bind dans le constructeur
     incremente = () => {
         // setState : indique à React que qq chose à été changé et qu'il faut se mettre à jour
-        this.setState(state => ({
+        this.setState(state, props) => ({
             // valeur initiale => nouvelle valeur
-            monCompteur: state.monCompteur + this.props.incr
+            monCompteur: state.monCompteur + props.incr
         }));
     }
     miseAzero = () => {
