--- a/09.Hook vs Class.md
+++ b/09.Hook vs Class.md
@@ -1,4 +1,4 @@
-<img src="./img/Hook.PNG"><img src="./img/class.PNG">
+<img src="./img/Hook.PNG" width=80%><img src="./img/class.PNG">
 
 
 # Compteur version Hook
