--- a/09.Hook vs Class.md
+++ b/09.Hook vs Class.md
@@ -1,4 +1,6 @@
-<img src="./img/Hook.PNG" width=80%><img src="./img/class.PNG">
+<div display="flex" justify-content="space-around">
+<img src="./img/Hook.PNG" width="35%"><img src="./img/class.PNG">
+</div>
 
 
 # Compteur version Hook
