--- a/08.Compteur.md
+++ b/08.Compteur.md
@@ -2,6 +2,8 @@
 
 C'est mieux car ça me permettrait d'avoir deux bouton différent. Un qui augmente de 1 et l'autre de 5 par exemple
 
+- **Fichier compteur.jsx** 
+
 ```jsx
 import PropType from 'prop-types';
 import { useState } from "react";
@@ -44,6 +46,13 @@ Compteur.PropType = {
 }
 
 export default Compteur;
+```
+
+- **Fichier App.js**
+
+```js
+<Compteur />
+<Compteur incr={5}/>
 ```
 
 # Compteur sans props
