--- a/02.style.md
+++ b/02.style.md
@@ -49,3 +49,53 @@ components > elementStyle > element-style.module.css
     color: hotpink;
 }
 ```
+
+# Texte qui change de couleur quand on clique sur lui
+
+- Fichier jsx
+
+```jsx
+import style from './text-color.module.css';
+import { useState } from "react";
+
+const TextColor = (props) => {
+
+    const { texte } = props;
+    const [ couleur , setCouleur] = useState('');
+
+    const changeCouleur = () => {
+        if (couleur === "") {
+            setCouleur(style.pink)
+        }else {
+            setCouleur("");
+        }
+    }
+
+    return(
+        <p className={couleur} onClick={changeCouleur}>{texte}</p>
+    );
+}
+TextColor.defaultProps = {
+    texte : ""
+}
+
+export default TextColor;
+```
+
+- App.js
+
+```js
+
+import TextColor from './components/textColor/text-color';
+
+function App() {
+  return (
+    <div className="App">
+    <TextColor texte="Marie" />
+
+    </div>
+  );
+}
+
+export default App;
+```
